# esp32-8048S070-lvgl-study

./: README.md  partitions.csv  sdkconfig  sdkconfig.old
a/: sdkconfig
components/lvgl__lvgl/src/extra/widgets/chart/: lv_chart.c  lv_chart.h
main/: CMakeLists.txt  idf_component.yml  main.c
main/ui/: ui.c  ui.h
main/ui/screens/: canvas_exm.c  charts.c  fs_test.c  modal.c  pulse.c  pulse_ver2.c  segment_font.c  segment_font.h  segment_font_1bit.c  segment_font_1bit.h  segment_font_20size.c  segment_font_20size.h  segment_font_22size.c  segment_font_22size.h  segment_font_25size.c  segment_font_25size.h  segment_font_40size.c  segment_font_40size.h  setup_set.c  seven_seg_font20.c  seven_seg_font20.h  simple_card_game.c  simple_card_game_init.c  simple_card_game_var.h  tabview_grid.c  tabview_setup.c  ui_Screen2.c
