idf_component_register(
    SRCS
        "main.c"
        "ui/ui.c"
        "ui/ui_helpers.c"
        "ui/screens/ui_Screen1.c"
        "ui/screens/ui_Screen2.c"
        "ui/screens/modal.c"
        "ui/screens/setup_set.c"
        "ui/screens/tabview_setup.c"
        "ui/screens/tabview_grid.c"
        "ui/screens/simple_card_game.c"
        "ui/screens/simple_card_game_init.c"
        "ui/screens/charts.c"
    INCLUDE_DIRS
        "."
)
